Export as Xhtml: added alt attribute to images, title attribute to links.